--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 :root{
-   --primary-color: orange;
+   --primary-color: #478fed;
    --text-color: #000;
    --border-color:#6B7280;
    --card-border-color:#00000030;
@@ -23,6 +23,7 @@ body{
     width: 100%;
     overflow-x: hidden;
     font-family: 'Open Sans', sans-serif;
+    position: relative;
 }
 
 h1,h2,h3,h4,h5,h6,p{
@@ -61,11 +62,133 @@ grid-gap: 40px;
     margin: auto;
 }
 
+.alert-main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+    background-color: #00000020;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+.alert-main.show-alert{
+    opacity: 1;
+    visibility: visible;
+    width: 100%;
+}
+
+.alert-main .card{
+    padding: 20px 40px;
+    background-color: #fff;
+    color: #000;
+    font-size: 22px;
+    font-weight: 400;
+    border-radius: 10px;
+}
+.alert-main .text-main{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.alert-main .value-copy{
+    font-size: 26px;
+    font-weight: 600;
+    color: var(--primary-color);
+    text-align: center;
+}
+
 .table-info{
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
     margin-top: 40px;
+}
+
+.table-info .items-group{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.items-group .item-content{
+    display: flex;
+    flex-direction: column;
+    padding: 15px 0;
+    border-radius: 6px;
+    border: 1px solid var(--card-border-color);
+    gap: 1rem;
+}
+.items-group .value-main{
+    color: var(--primary-color) !important;
+}
+
+.items-group .group-content{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.item-content > .item-header, .item-content .value-info{
+    padding: 0 15px;
+}
+
+.item-content > .item-header{
+    display: flex;
+    gap: 2rem;
+}
+
+.item-header svg{
+    cursor: pointer;
+    transition: .2s ease;
+    height: 20px;
+    width: 20px;
+}
+
+.item-header svg:hover{
+    width: 18px;
+    height: 18px;
+}
+
+.item-content > h5{
+    border-bottom: 1px solid var(--card-border-color);
+    padding-bottom: 15px !important;
+}
+.items-group .value-info{
+    display: flex;
+    gap: 2rem;    
+}
+
+.items-group .value-extra{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.items-group .value-inner{
+    display: flex;
+    justify-content: space-between;
+    gap: 3rem;
+}
+
+.items-group .color-block{
+    width: 80px;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--card-border-color);
+    flex-shrink: 0 !important;
+}
+
+.items-group .color-inner{
+    width: 100%;
+    height: 100%;
 }
 
 .card{
@@ -208,5 +331,52 @@ box-shadow: 1px 1px 3px #4a4a4a50;
 @media screen and (max-width:1200px){
     .container{
         padding: 0 15px;
+    }
+}
+
+@media screen and (max-width:980px) {
+    .token-div{
+        display: flex;
+        gap: 2rem;
+        flex-direction: column-reverse;
+    }
+   .token-div > .content{
+      margin-top: 0 !important;
+    }
+
+    aside{
+        border-left: none !important;
+       border-bottom: 1px solid var(--card-border-color);
+    }
+
+    aside .nav-links{
+        position: relative;
+        flex-direction: row;
+        top: auto !important;
+        padding: 20px;
+        justify-content: center;
+    }
+
+    .nav-links a,.nav-links a:hover, .nav-links a:focus{
+        border: none !important;
+    }
+    .items-group .value-inner{
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width:767px) {
+    .items-group .value-info{
+        flex-direction: column;
+    }
+    form{
+        grid-template-columns: auto;
+    }
+}
+
+@media screen and (max-width:540px) {
+    .items-group .value-inner{
+        flex-direction: column;
+        gap: 15px;
     }
 }
